-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11-shenandoah, 12, 13
-
Component/s: hotspot
-
b15
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8222606 | 12u-cpu | Aleksey Shipilev | P4 | Resolved | Fixed | master |
| JDK-8222139 | 12.0.2 | Aleksey Shipilev | P4 | Resolved | Fixed | b03 |
Described here:
https://mail.openjdk.java.net/pipermail/shenandoah-dev/2019-March/009109.html
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error
(/home/shade/trunks/shenandoah-jdk/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp:1606),
pid=27479, tid=27489
# assert(is_dominator(phase->get_ctrl(pre_val), ctrl->in(0)->in(0), pre_val, ctrl->in(0), phase))
failed: can't move
The fix is here:
https://mail.openjdk.java.net/pipermail/shenandoah-dev/2019-March/009131.html
https://mail.openjdk.java.net/pipermail/shenandoah-dev/2019-March/009109.html
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error
(/home/shade/trunks/shenandoah-jdk/src/hotspot/share/gc/shenandoah/c2/shenandoahSupport.cpp:1606),
pid=27479, tid=27489
# assert(is_dominator(phase->get_ctrl(pre_val), ctrl->in(0)->in(0), pre_val, ctrl->in(0), phase))
failed: can't move
The fix is here:
https://mail.openjdk.java.net/pipermail/shenandoah-dev/2019-March/009131.html
- backported by
-
JDK-8222139 Shenandoah fails ctw/modules/jdk_management_agent.java with Traversal
-
- Resolved
-
-
JDK-8222606 Shenandoah fails ctw/modules/jdk_management_agent.java with Traversal
-
- Resolved
-