8221735: Shenandoah fails ctw/modules/jdk_management_agent.java with Traversal

Reviewed-by: rkennke, roland